--- a/style.css
+++ b/style.css
@@ -49,6 +49,81 @@ main{
     width: 100px;
     height: 100px;
 }
+
+.container-apresentacao{
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.5);
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 2000;
+    
+    justify-content: center;
+    align-items: center;
+}
+.apresentacao{
+    background-color: #dde9d6;
+    width: 800px;
+    height: 390px;
+    padding: 30px;
+    
+}
+.apresentacao h2{
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 15px;
+
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 35px;
+
+    color: #75B79E;
+}
+.apresentacao ul{
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 20px;
+    line-height: 30px;
+    color: black;
+}
+.input{
+    width: 100%;
+    height: 40px;
+    margin: 5px 5px 0 0;
+    text-align: center;
+    border-radius: 9px;
+
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 20px;
+    color: black;
+}
+.button{
+    width: 100%;
+    height: 40px;
+    margin: 5px 5px 0 0;
+    text-align: center;
+    border-radius: 9px;
+    background-color:rgb(209, 66, 66);
+
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 20px;
+    color: white;
+
+    cursor: pointer;
+}
+
+
+
+
 /* screen na vertical (display referencia: galaxys5)*/ 
 @media (max-width: 360px){
 
