--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ body{
     color: #75B79E;
     margin: 40px 0;
 }
-main{
+.cards-game{
     width: 1110px;
     height: 629px;
 
@@ -143,7 +143,7 @@ main{
     line-height: 42px;
     text-align: center;
     }
-    main{
+    .cards-game{
     width: 360px;
     display: flex;
     flex-direction: row;
@@ -172,7 +172,7 @@ main{
     line-height: 42px;
     text-align: center;
     }
-    main{
+    .cards-game{
     width: 640px;
     display: flex;
     flex-direction: row;
