--- a/style.css
+++ b/style.css
@@ -49,9 +49,7 @@ body{
     width: 100px;
     height: 100px;
 }
-.hidden{
-    display: none;
-}
+
 
 .container-apresentacao{
     width: 100vw;
@@ -61,7 +59,7 @@ body{
     top: 0;
     left: 0;
     z-index: 2000;
-    
+    display: flex;
     justify-content: center;
     align-items: center;
 }
@@ -94,7 +92,7 @@ body{
     line-height: 30px;
     color: black;
 }
-.input{
+.inputName, .inputCardsGame{
     width: 100%;
     height: 40px;
     margin: 5px 5px 0 0;
@@ -123,7 +121,9 @@ body{
 
     cursor: pointer;
 }
-
+.hidden{
+    display: none;
+}
 
 
 
