--- a/style.css
+++ b/style.css
@@ -72,6 +72,19 @@ body{
 
   .card-selected .front-face {
     transform: rotateY(-180deg);
+  } 
+
+  
+   .cronometro {
+    /* position: fixed;
+    top: 20px;
+    right: 0px; */
+    padding-right: 5px;
+    font-size: 24px;     
+    color:#75B79E;    
+    line-height: 66px;
+    letter-spacing: -0.004em;  
+    top: -10px;
   }
 
 .card img{
