--- a/style.css
+++ b/style.css
@@ -22,9 +22,6 @@ body{
     margin: 40px 0;
 }
 .cards-game{
-    /* width: 1110px;
-    height: 629px; */
-
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
@@ -33,8 +30,6 @@ body{
     margin: 0 88px;
 }
 .card{
-    /* width: 117px;
-    height: 146px; */
     width: 200px;
     height: 250px;
 
@@ -42,10 +37,6 @@ body{
     justify-content: center;
     align-items: center;
 
-    /* background: #A7E9AF;
-    border: 1px solid #99CEA8;
-    box-sizing: border-box;
-    border-radius: 5px; */
 }
 .face {
     width: 200px;
@@ -76,9 +67,6 @@ body{
 
   
    .cronometro {
-    /* position: fixed;
-    top: 20px;
-    right: 0px; */
     padding-right: 5px;
     font-size: 24px;     
     color:#75B79E;    
@@ -134,6 +122,9 @@ body{
     line-height: 30px;
     color: black;
 }
+
+
+
 .inputName, .inputCardsGame{
     width: 100%;
     height: 40px;
@@ -163,6 +154,63 @@ body{
 
     cursor: pointer;
 }
+
+/* .container-final-game{
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.5);
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 3000;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.final-game{
+    background-color: #dde9d6;
+    width: 800px;
+    height: 390px;
+    padding: 30px;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.final-game h2{
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 15px;
+    text-align: center;
+
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 35px;
+
+    color: #75B79E;
+}
+.final-game button{
+    width: 100%;
+    height: 40px;
+    margin: 5px 5px 0 0;
+    text-align: center;
+    border-radius: 9px;
+    background-color:rgb(209, 66, 66);
+
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 20px;
+    color: white;
+
+    cursor: pointer;
+
+    margin-top: 50px;
+} */
 .hidden{
     display: none;
 }
